Initial fixes for #5